--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -19,7 +19,7 @@
                 <div class="alert alert-warning">{{ message }}</div>
               {% endif %}
                 {% csrf_token %}
-                  <h3 class="text-center">欢迎登录</h3>
+                  <h3 class="text-center">欢迎注册</h3>
 
                   <div class="form-group">
                     {{ login_form.username.label_tag }}
